--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.7.1",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "react": "^18",
